# das-dias.github.io

./: .gitignore  404.html  README.md  agriculture.html  analog-mixed-signal-ic-design.html  building-hardware-like-software-is-built.html  c-lang.html  cooking.html  digital-art.html  fruit-flies.html  gdsfactory.html  git-github.html  index.html  latex.html  mathjaxhelper.js  matlab.html  mkdocs.yml  page-1.html  page-2.html  page-3.html  politics.html  portugal-s-housing-crisis.html  portugal-s-interior-exodus.html  programming-languages.html  pyproject.toml  python.html  reds.html  requirements.txt  running.html  rust-lang.html  site.toml  sitemap.xml  zero-if-fsk-receiver.html
computational_electromagnetics/: index.html
docs/: index.md  intro_to_c_in_jupyter.md  mathjaxhelper.js  misc.md  signal_converters.md  signoff_tools.md
intro_to_c_in_jupyter/: index.html
misc/: index.html
search/: search_index.json
signal_converters/: index.html
signoff_tools/: index.html
site/: index.html
site/computational_electromagnetics/: index.html
site/search/: search_index.json
site/signal_converters/: index.html
src/das_dias_landing_page/: __init__.py
src/das_dias_landing_page.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
